feat:Initial form made

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-jj
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form Validator</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+    <form id = "form" class="form"></form>
+    <h2>Register With Us</h2>
+    <div>
+       <div class ="form-control">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Enter username">
+        <small>Error message</small>
+       </div>
+       <div class ="form-control">
+        <label for="email">Email</label>
+        <input type="text" id="email" placeholder="Enter your email">
+        <small>Error message</small>
+       </div>
+       <div class ="form-control">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Enter username">
+        <small>Error message</small>
+       </div>
+       <div class ="form-control">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Enter username">
+        <small>Error message</small>
+       </div>
+    </div>
+        
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
