--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <form id = "form" class="form"></form>
+    <form id = "form" class="form">
     <h2>Register With Us</h2>
     <div>
        <div class ="form-control">
@@ -22,17 +22,17 @@
         <small>Error message</small>
        </div>
        <div class ="form-control">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter username">
+        <label for="Password">Password</label>
+        <input type="text" id="Password" placeholder="Enter Password">
         <small>Error message</small>
        </div>
        <div class ="form-control">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter username">
+        <label for="password2">Confirm Password</label>
+        <input type="text" id="password2" placeholder="Enter Password again">
         <small>Error message</small>
        </div>
-    </div>
-        
+       <button>Submit</button>
+       </form>
     </div>
     <script src="script.js"></script>
 </body>
