--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        </div>
        <div class ="form-control">
         <label for="Password">Password</label>
-        <input type="text" id="Password" placeholder="Enter Password">
+        <input type="text" id="Password" placeholder="Enter password">
         <small>Error message</small>
        </div>
        <div class ="form-control">
