--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <form id = "form" class="form">
     <h2>Register With Us</h2>
     <div>
-       <div class ="form-control">
+       <div class ="form-control success">
         <label for="username">Username</label>
         <input type="text" id="username" placeholder="Enter username">
         <small>Error message</small>
        </div>
-       <div class ="form-control">
+       <div class ="form-control error">
         <label for="email">Email</label>
         <input type="text" id="email" placeholder="Enter your email">
         <small>Error message</small>
