--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
        <button>Submit</button>
        </form>
     </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
