fix:place holder id for the password has been corrected

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <small>Error message</small>
        </div>
        <div class ="form-control">
-        <label for="Password">Password</label>
-        <input type="text" id="Password" placeholder="Enter password">
+        <label for="password">Password</label>
+        <input type="text" id="password" placeholder="Enter password">
         <small>Error message</small>
        </div>
        <div class ="form-control">
